# slowql

./: .gitignore  .ocamlformat  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.md  dune-project  slowql.opam
.github/workflows/: ci.yml  release.yml
.lsp/.cache/: db.transit.json
.specstory/history/: 2025-12-20_18-44Z-ocaml-compiler-version-mismatch.md
docs/: BRANCHING_STRATEGY.md  GITHUB_ACTIONS.md  GIT_WORKFLOW.md
docs/slowql_mvp/: feature_ideas.md  implementation_plan.md  task.md  test_plan.md
lib/: dune
scripts/: opam-dune
src/: dune  fingerprint.ml  parser_pg.ml  report.ml  stats.ml
test/: dune  main.ml
